Bug 1276930 - Bypass HTTP cache data read right after shutdown, r=michal

--HG--
extra : rebase_source : c0f568a3642c74eaad7f901c52f6dd67c6281217